--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="/src/js/main.js"></script>
 </body>
 
 </html>
