feat: created toggle menus

--- a/index.html
+++ b/index.html
@@ -65,21 +65,139 @@
           <div class="canvasbar__item">
             <a href="">Про нас</a>
           </div>
-          <div class="canvasbar__item">
-            <a href="">Меню</a>
+
+          <div class="canvasbar__item accordeon">
+            <div class="accordeon-box">
+              <a href="" class="accordeon-box__link">Меню</a>
+              <button class="accordeon-box__btn">
+                <img src="/src/assets/icons/icons8-plus-24.png" alt="plus">
+              </button>
+            </div>
+            <ul class="accordeon-text">
+              <li class="accordeon__item">
+                <a href="">Холодні закуски</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Салати</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Гарячі закуски</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Паста та різотто</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Супи</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Гарніри</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">М'ясні страви</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Рибні страви</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Мангал меню</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Роли</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Дитяче меню</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Бенкетне меню</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Десерти</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Бізнес ланчі</a>
+              </li>
+            </ul>
           </div>
-          <div class="canvasbar__item">
-            <a href="">Бар</a>
+
+          <div class="canvasbar__item accordeon">
+            <div class="accordeon-box">
+              <a href="" class="accordeon-box__link">Бар</a>
+              <button class="accordeon-box__btn">
+                <img src="/src/assets/icons/icons8-plus-24.png" alt="plus">
+              </button>
+            </div>
+            <ul class="accordeon-text">
+              <li class="accordeon__item">
+                <a href="">Віскі</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Коньяк</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Горілка</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Ром Джин Текіла</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Вермут Настоянка</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Вина</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Пиво</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Напої Соки</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Алкогольні коктейлі</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Кава Чай</a>
+              </li>
+            </ul>
           </div>
-          <div class="canvasbar__item">
-            <a href="">Бенкети</a>
+
+          <div class="canvasbar__item accordeon">
+            <div class="accordeon-box">
+              <a href="" class="accordeon-box__link">Банкети</a>
+              <button class="accordeon-box__btn">
+                <img src="/src/assets/icons/icons8-plus-24.png" alt="plus">
+              </button>
+            </div>
+            <ul class="accordeon-text">
+              <li class="accordeon__item">
+                <a href="">Банкетне меню</a>
+              </li>
+            </ul>
           </div>
-          <div class="canvasbar__item">
-            <a href="">Галерея</a>
+
+          <div class="canvasbar__item accordeon">
+            <div class="accordeon-box">
+              <a href="" class="accordeon-box__link">Галерея</a>
+              <button class="accordeon-box__btn">
+                <img src="/src/assets/icons/icons8-plus-24.png" alt="plus">
+              </button>
+            </div>
+            <ul class="accordeon-text">
+              <li class="accordeon__item">
+                <a href="">Інтер'єр ресторану</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Вишуканість у кожній деталі</a>
+              </li>
+              <li class="accordeon__item">
+                <a href="">Меню ресторану</a>
+              </li>
+            </ul>
           </div>
+
           <div class="canvasbar__item">
             <a href="">Блог</a>
           </div>
+
           <div class="canvasbar__item">
             <a href="">Контакти</a>
           </div>
